@@ -3,55 +3,61 @@ package com.Mac.AIGeminiAgents.Services;
 import org.springframework.ai.chat.client.ChatClient;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Service
 public class ChatService {
-    private final ChatClient chatClient;
-    private final TechnicalDocsService docsService;
 
-    public ChatService(ChatClient.Builder builder, TechnicalDocsService docsService) {
-        this.chatClient = builder.build();
+    private final TechnicalDocsService docsService;
+    private final AgentAService agentAService;
+    private final AgentBService agentBService;
+
+    public ChatService(AgentAService agentAService, AgentBService agentBService, TechnicalDocsService docsService) {
         this.docsService = docsService;
+        this.agentAService = agentAService;
+        this.agentBService = agentBService;
     }
 
-    //Agent A
-    public String processQuestion(String userQuestion, String clarificationAnswer) {
-        String docs;
-        if(clarificationAnswer != null && !clarificationAnswer.trim().isEmpty()){
-            docs = docsService.getDocContent(clarificationAnswer);
-            return agentA(userQuestion,docs);
+
+    public String processQuestion(String userQuestion, String clarificationAnswer,String sessionHistory) {
+
+        List<String> billingKeywords = Arrays.asList(
+                "refund", "billing", "invoice", "payment", "charge", "price", "plan"
+        );
+
+        String lowerQuestion = userQuestion.toLowerCase();
+        boolean isBillingQuestion = billingKeywords.stream().anyMatch(lowerQuestion::contains);
+
+        if (isBillingQuestion) {
+            return agentBService.agentB(userQuestion, sessionHistory);
         }
+
+        if (clarificationAnswer != null && !clarificationAnswer.trim().isEmpty()) {
+            String docs = docsService.getDocContent(clarificationAnswer);
+            return agentAService.agentA(userQuestion, docs, sessionHistory);
+        }
+
         List<String> fieldList = docsService.findDocsByMessageAliases(userQuestion);
 
-        if(fieldList.size()==1){
-            docs = docsService.getDocContent(fieldList.getFirst());
-            return agentA(userQuestion,docs);
+        if (fieldList.size() == 1) {
+            String docs = docsService.getDocContent(fieldList.get(0));
+            return agentAService.agentA(userQuestion, docs, sessionHistory);
         }
-        if(fieldList.size()>1){
 
-            return "Czy Twoje pytanie dotyczy: " +
-                    String.join(" / ", fieldList) +
-                    "? Proszę doprecyzować, aby otrzymać bardziej szczegółową odpowiedź.";
+        if (fieldList.size() > 1) {
+            return "Is your question related to: " +
+                    String.join(" or ", fieldList) +
+                    "? Please answer.";
         }
-        return agentB("Say Hi in spanish");
+
+        return agentBService.agentB(userQuestion, sessionHistory);
     }
 
-    public String agentA(String userQuestion, String docs){
-        String prompt = "You are a technical support expert named AgentA - always introduce your name. Use ONLY the docs below to answer. Docs: " + docs;
-        return chatClient.prompt()
-                .system(prompt)
-                .user(userQuestion)
-                .call()
-                .content();
-    }
-    public String agentB(String userQuestion){
-        String prompt= "You are AgentB";
-        return chatClient.prompt()
-                .system(prompt)
-                .user(userQuestion)
-                .call()
-                .content();
-    }
+
+
+
+
+
 
 }
